--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,10 +19,10 @@ build:
 requirements:
   host:
     - pip
-    - python
+    - python >= 3.6
 
   run:
-    - python
+    - python >= 3.6
     - twisted >=15.0
     - wrapt
 
